--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,4 @@
-version: '3.8'
+version: '3.3'
 
 volumes:
   postgres_data:
@@ -14,7 +14,7 @@ services:
       - ./foodgram_project/.env
 
   web:
-    build: .
+    image: dmitrybrezgunov/foodgram-project:v1
     restart: always
     command: gunicorn foodgram_project.wsgi:application --bind 0.0.0.0:8000
     volumes:
@@ -34,6 +34,6 @@ services:
       - static_volume:/code/static/
       - media_volume:/code/media/
     ports:
-      - 1337:80
+      - 80:80
     depends_on:
       - web
