--- a/nginx.conf
+++ b/nginx.conf
@@ -11,6 +11,7 @@ http {
         server_name 130.193.57.95 foodgram.ga www.foodgram.ga;
 
         location /static/ {
+            include /etc/nginx/mime.types;
             autoindex on;
             root /code/;
         }
